commits by atharv

--- a/SRC/pages/hobbies.html
+++ b/SRC/pages/hobbies.html
@@ -22,11 +22,11 @@
         </a>
         <div class="navbar">
             <a href="/index.html">Home</a>
-            <a href="./skills.html">skills</a>
+            <!-- <a href="./skills.html">skills</a> -->
             <a href="./education.html">Education</a>
-            <a href="./gallery.html">Gallery</a>
+            <!-- <a href="./gallery.html">Gallery</a> -->
             <a href="./career.html">Career</a>
-            <a href="./hobbies.html" class="active">Hobbies</a>
+            <a href="./hobbies.html" class="active">Projects</a>
             <a href="./testimonials.html">Testimonials</a>
         </div>
 
@@ -42,7 +42,7 @@
     <main class="hobbies-main">
         <div class="hobbies-section">
             <div class="hobbies-header">
-                <div class="header-text">My Hobbies</div>
+                <div class="header-text">Projects</div>
                 <div class="header-line"></div>
             </div>
             <div class="section">
