--- a/SRC/pages/education.html
+++ b/SRC/pages/education.html
@@ -23,10 +23,10 @@
         </a>
         <div class="navbar">
             <a href="/index.html">Home</a>
-            <a href="./skills.html">skills</a>
+            <!-- <a href="./skills.html">skills</a> -->
             <a href="./education.html" class="active">Education</a>
             <a href="./career.html">Career</a>
-            <a href="./hobbies.html">Hobbies</a>
+            <a href="./hobbies.html">Projects</a>
             <a href="./testimonials.html">Testimonials</a>
         </div>
 
