--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-
+    <!-- <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>   -->
 <!-- Hello -->
     <header class="header" id="header">
         <!-- <a href="index.html" class="logo"><span class="main-icon"></span><span>Hello</span></a> -->
@@ -25,10 +27,10 @@
 
         <div class="navbar">
             <a href="index.html" class="active">Home</a>
-            <a href="SRC/pages/skills.html">Skills</a>
+            <!-- <a href="SRC/pages/skills.html">Skills</a> -->
             <a href="SRC/pages/education.html">Education</a>
             <a href="SRC/pages/career.html">Career</a>
-            <a href="SRC/pages/hobbies.html">Hobbies</a>
+            <a href="SRC/pages/hobbies.html">Projects</a>
             <a href="SRC/pages/testimonials.html">Testimonials</a>
         </div>
 
