--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section class="about" id="about">
             <div class="about-content">
                 <div class="column right">
-                    <img src="Assets/pfp.jpg" alt="">
+                    <img src="Assets/pfp.JPG" alt="">
                 </div>
                 <div class="column left">
                     <div class="text">I'm Atharv and I'm a <span id="typed" class="iAm"></span></div>
