--- a/SRC/pages/education.html
+++ b/SRC/pages/education.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Education</title>
+    <title>Atharv's Education</title>
     <link rel="stylesheet" type="text/css" href="../style/style.css">
     <link rel="icon" href="/Assets/favicons/favicon.png" type="image/png" sizes="32x32">
 
@@ -27,7 +27,7 @@
             <a href="./education.html" class="active">Education</a>
             <a href="./career.html">Career</a>
             <a href="./hobbies.html">Projects</a>
-            <a href="./testimonials.html">Testimonials</a>
+            <!-- <a href="./testimonials.html">Testimonials</a> -->
         </div>
 
         <div class="main">
