--- a/SRC/pages/contact.html
+++ b/SRC/pages/contact.html
@@ -22,12 +22,12 @@
         </a>
         <div class="navbar">
             <a href="../../index.html">Home</a>
-            <a href="./skills.html">skills</a>
+            <!-- <a href="./skills.html">skills</a> -->
             <a href="./education.html">Education</a>
-            <a href="./gallery.html">Gallery</a>
+            <!-- <a href="./gallery.html">Gallery</a> -->
             <a href="./career.html">Career</a>
-            <a href="./hobbies.html">Hobbies</a>
-            <a href="./testimonials.html">Testimonials</a>
+            <a href="./hobbies.html">Projects</a>
+            <!-- <a href="./testimonials.html">Testimonials</a> -->
         </div>
 
         <div class="main">
@@ -50,21 +50,21 @@
                         <div class="icon"><i class="fas fa-envelope"></i></div>
                         <div class="text">
                             <div class="placeHolder">E-mail</div>
-                            <div class="info">xxxxxxxxxxx@gmail.com</div>
+                            <div class="info">aup2007@nyu.edu</div>
                         </div>
                     </div>
                     <div class="cs-item number">
                         <div class="icon"><i class="fas fa-phone"></i></i></div>
                         <div class="text">
                             <div class="placeHolder">Phone</div>
-                            <div class="info">+61 xxxxxxxxx</div>
+                            <div class="info">+1 (732) 558 3111</div>
                         </div>
                     </div>
                     <div class="cs-item address">
                         <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
                         <div class="text">
                             <div class="placeHolder">Address</div>
-                            <div class="info">Address, Address</div>
+                            <div class="info">New York, NY</div>
                         </div>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
         </main>
         <footer class="footer">
             <div class="left">
-                &copy; 2023 • R. Charlox • All Rights Reserved
+                <!-- &copy; 2023 • R. Charlox • All Rights Reserved -->
             </div>
             <div class="right">
                 <div class="social"><a href="https://www.facebook.com/ritoncharlox" target="_blank"><i
