--- a/SRC/pages/hobbies.html
+++ b/SRC/pages/hobbies.html
@@ -2,137 +2,172 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hobbies</title>
-    <link rel="stylesheet" type="text/css" href="../style/style.css">
-    <link rel="icon" href="/Assets/favicons/favicon.png" type="image/png" sizes="32x32">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Atharv's Projects</title>
+  <link rel="stylesheet" type="text/css" href="../style/style.css">
+  <link rel="icon" href="/Assets/favicons/favicon.png" type="image/png" sizes="32x32">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 
 <body>
 
+  <header class="header" id="header">
+    <a href="index.html" class="logo">
+      <span>Atharv Parab</span>
+    </a>
+    <div class="navbar">
+      <a href="/index.html">Home</a>
+      <a href="./education.html">Education</a>
+      <a href="./career.html">Career</a>
+      <a href="./hobbies.html" class="active">Projects</a>
+      <!-- <a href="./testimonials.html">Testimonials</a> -->
+    </div>
+    <div class="main">
+      <a href="contact.html" class="user main-items">
+        <i class="fas fa-envelope cm-icon"></i>Contact Me
+      </a>
+      <div class="main-items menu-icon-container" id="menu-icon-js">
+        <div class="bx bx-menu" id="menu-icon"></div>
+      </div>
+    </div>
+  </header>
 
-    <header class="header" id="header">
-        <a href="index.html" class="logo">
-            <!-- <img src="Assets/A.png" alt="Logo" style="height: 20px;">  -->
-            <span>Atharv Parab</span>
-        </a>
-        <div class="navbar">
-            <a href="/index.html">Home</a>
-            <!-- <a href="./skills.html">skills</a> -->
-            <a href="./education.html">Education</a>
-            <!-- <a href="./gallery.html">Gallery</a> -->
-            <a href="./career.html">Career</a>
-            <a href="./hobbies.html" class="active">Projects</a>
-            <a href="./testimonials.html">Testimonials</a>
+<div class="page">
+    <main class="projects-main">
+      <div class="projects-section">
+        <div class="projects-header">
+          <!-- <div class="header-text">My Projects</div> -->
+          <!-- <p class="styled-intro">
+            My Projects
+        </p> -->
+          <div class="header-line"></div>
         </div>
-
-        <div class="main">
-            <a href="contact.html" class="user main-items"><i class="fas fa-envelope cm-icon"></i>Contact Me</a>
-            <div class="main-items menu-icon-container" id="menu-icon-js">
-                <div class="bx bx-menu" id="menu-icon"></div>
-            </div>
-        </div>
-    </header>
-
-    <div class="page">
-    <main class="hobbies-main">
-        <div class="hobbies-section">
-            <div class="hobbies-header">
-                <div class="header-text">Projects</div>
-                <div class="header-line"></div>
-            </div>
-            <div class="section">
-                <div class="row first">
-                    <div class="hobbies 1">
-                        <div class="image">
-                            <img src="/Assets/hobbies/travelling.jpeg" alt="">
-                        </div>
-                        <div class="header">
-                            <div class="header-text">Travelling</div>
-                            <div class="header-line"></div>
-                        </div>
-                        <div class="text">
-                            Traveling is more than just a pastime for me; it's a way of life. Exploring new
-                            destinations,
-                            immersing myself in diverse cultures, and uncovering the beauty of our world bring me
-                            immense
-                            joy
-                            and endless opportunities for personal growth.
-                        </div>
-                    </div>
-                    <div class="hobbies 2">
-                        <div class="image">
-                            <img src="/Assets/hobbies/swimming.jpg" alt="">
-                        </div>
-                        <div class="header">
-                            <div class="header-text">Swimming</div>
-                            <div class="header-line"></div>
-                        </div>
-                        <div class="text">
-                            Swimming is my ultimate escape. The feeling of gliding through the water, weightless and
-                            free, is truly unparalleled. Whether it's in the calm waters of a pool or the waves of the
-                            open sea, swimming rejuvenates my body and soul.
-                        </div>
-                    </div>
+        <!-- <p class="styled-intro">
+            My Projects
+        </p> -->
+        <div class="slider-container">
+            <!-- <p class="styled-intro">
+            My Projects
+        </p> -->
+            <div class="slider">
+              <!-- <div class="slide">
+                <img src="https://via.placeholder.com/250x120" alt="Project 1" style="width: 100%; height: 120px; object-fit: cover;">
+                <h4>Finge</h4>
+                <p>React, Flask, Yahoo Finance API</p>
+                <div class="icon">
+                  <a href="https://github.com/your-repo" target="_blank"><i class="fab fa-github"></i></a>
+                  <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+                  <a href="https://project-demo.com" target="_blank"><i class="fas fa-link"></i></a>
                 </div>
-                <div class="row second">
-                    <div class="hobbies 3">
-                        <div class="image">
-                            <img src="/Assets/hobbies/social adventures.jpg" alt="">
-                        </div>
-                        <div class="header">
-                            <div class="header-text">Social Hangouts</div>
-                            <div class="header-line"></div>
-                        </div>
-                        <div class="text">
-                            Spending quality time with friends is a treasured escape from the routine. Whether it's
-                            sharing laughter, exploring new places, or simply enjoying each other's company, social
-                            hangouts create lasting bonds and cherished memories.
-                        </div>
-                    </div>
-                    <div class="hobbies 4">
-                        <div class="image">
-                            <img src="/Assets/hobbies/photography.jpeg" alt="">
-                        </div>
-                        <div class="header">
-                            <div class="header-text">Photography</div>
-                            <div class="header-line"></div>
-                        </div>
-                        <div class="text">
-                            Photography is my way of capturing the world's fleeting moments and turning them into
-                            lasting memories. With a camera in hand, I explore the beauty of everyday life, seeking to
-                            frame the world in a unique and captivating way.
-                        </div>
-                    </div>
+              </div> -->
+              <div class="slide">
+                <!-- <img src="https://via.placeholder.com/250x120" alt="Finge Project Screenshot" style="width: 100%; height: 120px; object-fit: cover;"> -->
+                <h4>Finge</h4>
+                <p class="tech">React, TypeScript, FastAPI, MongoDB, OpenAI</p>
+                <p style="font-size: 13px; text-align: center; padding: 0 10px;" class="description">
+                  A Hinge-style investment discovery app built at HackNYU 2025. 
+                </p>
+                <div class="icon">
+                  <a href="https://github.com/aup2007/Finge-HackNYU" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                  <a href="https://devpost.com/software/fin-ge" target="_blank" title="Devpost"><i class="fas fa-code"></i></a>
+                  <a href="https://www.linkedin.com/posts/atharvparab17_hacknyu-ai-fintech-activity-7295554276418809856-ZI5W?utm_source=share&utm_medium=member_desktop&rcm=ACoAADYv2ToBo1jibTJCcAjE6P272qCdIp0NWVc" target="_blank"><i class="fab fa-linkedin"></i></a>
+                  <a href="https://finge.vercel.app/" target="_blank" title="Live Demo"><i class="fas fa-link"></i></a>
                 </div>
+              </div>
+              <div class="slide">
+                <!-- <img src="https://via.placeholder.com/250x120" alt="Finge Project Screenshot" style="width: 100%; height: 120px; object-fit: cover;"> -->
+                <h4>SolveIt</h4>
+                <h4>Captcha Solver</h4>
+                <p class="tech">PyTorch, CNN+LSTM, MLflow, Flask, Docker Compose, PWA</p>
+                <p style="font-size: 13px; text-align: center; padding: 0 10px;" class="description">
+                  Developed an end to end ML system to solve CAPTCHAs
+                </p>
+                <div class="icon">
+                  <a href="https://github.com/aup2007/SolveIt" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                  <a href="https://www.linkedin.com/posts/atharvparab17_hacknyu-ai-fintech-activity-7295554276418809856-ZI5W?utm_source=share&utm_medium=member_desktop&rcm=ACoAADYv2ToBo1jibTJCcAjE6P272qCdIp0NWVc" target="_blank"><i class="fab fa-linkedin"></i></a>
+                  <a href="https://solveit-ekg2.onrender.com/" target="_blank" title="Live Demo"><i class="fas fa-link"></i></a>
+                </div>
+              </div>
+              <div class="slide">
+                <!-- <img src="/Assets/projects/project1.png" alt="Project 1" style="width: 100%; height: 120px; object-fit: cover;"> -->
+                <h4>LLM Tokenizer</h4>
+                <p> Python, PySpark, Hugging Face, BPE</p>
+                <p style="font-size: 13px; text-align: center; padding: 0 10px;" class="description">
+                  Built a PySpark-powered pipeline to tokenize Wikipedia data for LLMs using Hugging Face and Byte Pair Encoding
+                </p>
+                <div class="icon">
+                  <a href="https://github.com/aup2007/6513-LLM-Tokenizer" target="_blank"><i class="fab fa-github"></i></a>
+                  <a href="https://www.linkedin.com/in/atharvparab17/details/projects/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                  <!-- <a href="https://project-demo.com" target="_blank"><i class="fas fa-link"></i></a> -->
+                </div>
+              </div>
+              <div class="slide">
+                <!-- <img src="/Assets/projects/project1.png" alt="Project 1" style="width: 100%; height: 120px; object-fit: cover;"> -->
+                <h4>Stock Trading using Deep RL</h4>
+                <p>Python, PyTorch, A2C, PPO, DDPG, NumPy, Pandas</p>
+                <p style="font-size: 13px; text-align: center; padding: 0 10px;" class="description">
+                  Built a deep RL model to trade stocks applyied time series analysis
+                </p>
+                <div class="icon">
+                  <a href="https://github.com/your-repo" target="_blank"><i class="fab fa-github"></i></a>
+                  <a href="https://www.linkedin.com/in/atharvparab17/details/projects/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                  <!-- <a href="https://project-demo.com" target="_blank"><i class="fas fa-link"></i></a> -->
+                </div>
+              </div>
+              <!-- <div class="slide">
+                <img src="/Assets/projects/project1.png" alt="Project 1" style="width: 100%; height: 120px; object-fit: cover;">
+                <h4>StockMate</h4>
+                <p>React, Flask, Yahoo Finance API</p>
+                <div class="icon">
+                  <a href="https://github.com/your-repo" target="_blank"><i class="fab fa-github"></i></a>
+                  <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+                  <a href="https://project-demo.com" target="_blank"><i class="fas fa-link"></i></a>
+                </div>
+              </div> -->
+              <div class="slide">
+                <!-- <img src="/Assets/projects/project1.png" alt="Project 1" style="width: 100%; height: 120px; object-fit: cover;"> -->
+                <h4>Housing Stability </h4>
+                <p>Python, Scikit-learn, Pandas, Apache Spark, Tableau</p>
+                <p style="font-size: 13px; text-align: center; padding: 0 10px;" class="description">
+                  Developed ML models on CoC data to predict housing outcomes, achieving 83.8% R² and Spark for large-scale processing </p>
+                <div class="icon">
+                  <!-- <a href="https://github.com/your-repo" target="_blank"><i class="fab fa-github"></i></a> -->
+                  <a href="https://www.linkedin.com/in/atharvparab17/details/projects/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                  <!-- <a href="https://project-demo.com" target="_blank"><i class="fas fa-link"></i></a> -->
+                </div>
+              </div>
+              <!-- Duplicate .slide divs for more projects -->
             </div>
+          </div>
+          
+
         </div>
     </main>
+
     <footer class="footer">
-        <div class="left">
-            &copy; 2023 • R. Charlox • All Rights Reserved
+      <div class="left">
+      </div>
+      <div class="right">
+        <div class="social">
+          <a href="https://www.facebook.com/ritoncharlox" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         </div>
-        <div class="right">
-            <div class="social"><a href="https://www.facebook.com/ritoncharlox" target="_blank"><i
-                        class="fa-brands fa-facebook"></i></a></div>
-            <div class="social"><a href="https://www.instagram.com/ritoncharlox" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
-            <div class="social"><a href="https://www.linkedin.com/in/ritoncharlox" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
-            <div class="social"><a href="https://github.com/ritoncharlox" target="_blank"><i class="fa-brands fa-github"></i></a></div>
+        <div class="social">
+          <a href="https://www.instagram.com/ritoncharlox" target="_blank"><i class="fa-brands fa-instagram"></i></a>
         </div>
+        <div class="social">
+          <a href="https://www.linkedin.com/in/ritoncharlox" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+        <div class="social">
+          <a href="https://github.com/ritoncharlox" target="_blank"><i class="fa-brands fa-github"></i></a>
+        </div>
+      </div>
     </footer>
 </div>
 
-
-
-
-
-    <div class="nav-touch-close" id="nav-tc-js"></div>
-
-    <script type="text/javascript" src="../script/script.js"></script>
+  <div class="nav-touch-close" id="nav-tc-js"></div>
+  <script type="text/javascript" src="../script/script.js"></script>
 
 </body>
 
