--- a/SRC/pages/skills.html
+++ b/SRC/pages/skills.html
@@ -23,12 +23,12 @@
 
         <div class="navbar">
             <a href="/index.html">Home</a>
-            <a href="./skills.html" class="active">skills</a>
+            <!-- <a href="./skills.html" class="active">skills</a> -->
             <a href="./education.html">Education</a>
-            <a href="./gallery.html">Gallery</a>
+            <!-- <a href="./gallery.html">Gallery</a> -->
             <a href="./career.html">Career</a>
-            <a href="./hobbies.html">Hobbies</a>
-            <a href="./testimonials.html">Testimonials</a>
+            <a href="./hobbies.html">Projects</a>
+            <!-- <a href="./testimonials.html">Testimonials</a> -->
         </div>
 
         <div class="main">
