--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home Page</title>
+    <title>Atharv's Bio</title>
     <link rel="stylesheet" type="text/css" href="SRC/style/style.css">
     <link rel="icon" href="Assets/favicons/favicon.png" type="image/png" sizes="32x32">
 
@@ -31,7 +31,7 @@
             <a href="SRC/pages/education.html">Education</a>
             <a href="SRC/pages/career.html">Career</a>
             <a href="SRC/pages/hobbies.html">Projects</a>
-            <a href="SRC/pages/testimonials.html">Testimonials</a>
+            <!-- <a href="SRC/pages/testimonials.html">Testimonials</a> -->
         </div>
 
         <div class="main">
