--- a/SRC/pages/career.html
+++ b/SRC/pages/career.html
@@ -204,11 +204,9 @@
             <div class="left">
             </div>
             <div class="right">
-                <div class="social"><a href="https://www.facebook.com/ritoncharlox" target="_blank"><i
-                            class="fa-brands fa-facebook"></i></a></div>
-                <div class="social"><a href="https://www.instagram.com/ritoncharlox" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
-                <div class="social"><a href="https://www.linkedin.com/in/ritoncharlox" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
-                <div class="social"><a href="https://github.com/ritoncharlox" target="_blank"><i class="fa-brands fa-github"></i></a></div>
+                
+                <div class="social"><a href="https://www.linkedin.com/in/atharvparab17" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
+                <div class="social"><a href="https://github.com/aup2007" target="_blank"><i class="fa-brands fa-github"></i></a></div>
             </div>
         </footer>
     </div>
