--- a/SRC/pages/contact.html
+++ b/SRC/pages/contact.html
@@ -119,7 +119,7 @@
                             </div>
                         </button>
                     </form> -->
-                    <img src="image.png" alt="">
+                    <img src="assets/image.png" alt="">
                     <form action="https://formspree.io/f/yourFormID" method="POST" id="contact-form">
                         <div class="form-group name-section">
                           <label for="name">Name</label>
