--- a/SRC/pages/contact.html
+++ b/SRC/pages/contact.html
@@ -119,7 +119,11 @@
                             </div>
                         </button>
                     </form> -->
-                    <img src="Assets/image.png" alt="">
+                    <div>
+                        <img src="Assets/image.png" alt="">
+
+                    </div>
+                    
                     <!-- <form action="https://formspree.io/f/yourFormID" method="POST" id="contact-form">
                         <div class="form-group name-section">
                           <label for="name">Name</label>
