--- a/SRC/pages/contact.html
+++ b/SRC/pages/contact.html
@@ -120,7 +120,7 @@
                         </button>
                     </form> -->
                     <div>
-                        <img src="../Assets/image.png" alt="">
+                        <img src="../../Assets/image.png" alt="">
 
                     </div>
                     
