--- a/SRC/pages/contact.html
+++ b/SRC/pages/contact.html
@@ -119,8 +119,8 @@
                             </div>
                         </button>
                     </form> -->
-                    <div>
-                        <img src="../../Assets/image.png" alt="">
+                    <div class="contact-section">
+                        <img src="../../Assets/image.png" alt="Contact Visual" class="contact-image">
 
                     </div>
                     
