--- a/SRC/pages/contact.html
+++ b/SRC/pages/contact.html
@@ -119,7 +119,7 @@
                             </div>
                         </button>
                     </form> -->
-                    <div class="contact-form">
+                    <div class="form-group name-section">
                         <img src="../../Assets/image.png" alt="Contact Visual" class="contact-image">
 
                     </div>
