--- a/SRC/pages/contact.html
+++ b/SRC/pages/contact.html
@@ -88,8 +88,8 @@
                             <div class="csa-ok">OK</div>
                         </div>
                     </div>
-                    <!-- <form id="contact-form" class="form-section" novalidate> -->
-                    <!-- <form action="https://formspree.io/f/xldbeqgd" method="POST">
+                    <form id="contact-form" class="form-section" novalidate> -->
+                    <!-- <!-- <form action="https://formspree.io/f/xldbeqgd" method="POST"> -->
 
                         <div class="form-group name-section">
                             <label for="name">Name</label>
@@ -118,11 +118,11 @@
                                 Submit
                             </div>
                         </button>
-                    </form> -->
-                    <div class="form-group name-section">
+                    </form>
+                    <!-- <div class="form-group name-section">
                         <img src="../../Assets/image.png" alt="Contact Visual" class="contact-image">
 
-                    </div>
+                    </div> -->
                     
                     <!-- <form action="https://formspree.io/f/yourFormID" method="POST" id="contact-form">
                         <div class="form-group name-section">
