--- a/SRC/pages/contact.html
+++ b/SRC/pages/contact.html
@@ -182,7 +182,7 @@
     </script>
     <script type="text/javascript">
         (function () {
-            emailjs.init("service_iugc97j");
+            emailjs.init("7InRyhBFvN-rwI7kP");
         })();
     </script>
     <script>
