--- a/SRC/pages/contact.html
+++ b/SRC/pages/contact.html
@@ -36,6 +36,8 @@
             <!-- <a href="./gallery.html">Gallery</a> -->
             <a href="./career.html">Career</a>
             <a href="./hobbies.html">Projects</a>
+            <a href="./resume.html" class="active">Resume</a>
+
             <!-- <a href="./testimonials.html">Testimonials</a> -->
         </div>
 
