--- a/SRC/pages/career.html
+++ b/SRC/pages/career.html
@@ -34,6 +34,8 @@
             <a href="./education.html">Education</a>
             <a href="./career.html" class="active">Career</a>
             <a href="./hobbies.html">Projects</a>
+            <a href="./resume.html" class="active">Resume</a>
+
             <!-- <a href="./testimonials.html">Testimonials</a> -->
         </div>
 
