--- a/SRC/pages/education.html
+++ b/SRC/pages/education.html
@@ -36,6 +36,8 @@
             <a href="./education.html" class="active">Education</a>
             <a href="./career.html">Career</a>
             <a href="./hobbies.html">Projects</a>
+            <a href="./resume.html" class="active">Resume</a>
+
             <!-- <a href="./testimonials.html">Testimonials</a> -->
         </div>
 
