--- a/SRC/pages/resume.html
+++ b/SRC/pages/resume.html
@@ -28,14 +28,18 @@
   <main class="contact-main" style="padding: 40px; text-align: center;">
     <h1>My Resume</h1>
     <div class="border-line"></div>
-    <iframe 
-      src="assets/AtharvParab_NYU_ComputerEngineering.pdf#toolbar=0" 
-      width="100%" 
-      height="800px" 
-      style="border: none; margin-top: 20px;"
-    ></iframe>
+<iframe 
+  src="../../Assets/AtharvParab_NYU_ComputerEngineering.pdf#toolbar=0" 
+  width="100%" 
+  height="800px" 
+  style="border: none;"
+></iframe>
     <p style="margin-top: 10px;">
-      <a href="assets/AtharvParab_NYU_ComputerEngineering.pdf" target="_blank" download>Download Resume (PDF)</a>
+    <a 
+    href="../../Assets/AtharvParab_NYU_ComputerEngineering.pdf" 
+    target="_blank" 
+    download
+    >Download Resume</a>
     </p>
   </main>
 
