--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="SRC/pages/education.html">Education</a>
             <a href="SRC/pages/career.html">Career</a>
             <a href="SRC/pages/hobbies.html">Projects</a>
-            <a href="./resume.html" class="active">Resume</a>
+            <a href="SRC/pages/resume.html" class="active">Resume</a>
 
             <!-- <a href="SRC/pages/testimonials.html">Testimonials</a> -->
         </div>
