--- a/SRC/pages/resume.html
+++ b/SRC/pages/resume.html
@@ -29,17 +29,18 @@
     <h1>My Resume</h1>
     <div class="border-line"></div>
 <iframe 
-  src="../../Assets/AtharvParab_NYU_ComputerEngineering.pdf#toolbar=0" 
+  src="Assets/AtharvParab_NYU_ComputerEngineering.pdf#toolbar=0" 
   width="100%" 
-  height="500px" 
+  height="800px" 
   style="border: none;"
 ></iframe>
     <p style="margin-top: 10px;">
-    <a 
-    href="../../Assets/AtharvParab_NYU_ComputerEngineering.pdf" 
-    target="_blank" 
-    download
-    >Download Resume</a>
+<a 
+  href="Assets/AtharvParab_NYU_ComputerEngineering.pdf" 
+  target="_blank" 
+  download
+>Download Resume</a>
+
     </p>
   </main>
 
