--- a/SRC/pages/resume.html
+++ b/SRC/pages/resume.html
@@ -26,23 +26,25 @@
   </header>
 
   <main class="contact-main" style="padding: 40px; text-align: center;">
-    <h1>My Resume</h1>
-    <div class="border-line"></div>
-    <iframe 
-    src="../assets/AtharvParab_NYU_ComputerEngineering.pdf#toolbar=0" 
+  <h1>My Resume</h1>
+  <div class="border-line"></div>
+
+  <iframe 
+    src="/AtharvParab_NYU_ComputerEngineering.pdf#toolbar=0" 
     width="100%" 
     height="800px" 
     style="border: none;"
-    ></iframe>
-    <p style="margin-top: 10px;">
-<a 
-  href="../assets/AtharvParab_NYU_ComputerEngineering.pdf" 
-  target="_blank" 
-  download
->Download Resume</a>
+  ></iframe>
 
-    </p>
-  </main>
+  <p style="margin-top: 10px;">
+    <a 
+      href="/AtharvParab_NYU_ComputerEngineering.pdf" 
+      target="_blank" 
+      download
+    >Download Resume</a>
+  </p>
+</main>
+
 
   <footer class="footer">
     <div class="left"></div>
