--- a/SRC/pages/resume.html
+++ b/SRC/pages/resume.html
@@ -29,21 +29,29 @@
   <h1>My Resume</h1>
   <div class="border-line"></div>
 
+  <main class="contact-main" style="padding: 40px; text-align: center;">
+  <h1>My Resume</h1>
+  <div class="border-line"></div>
+
+  <!-- Embedded Google Drive PDF Viewer -->
   <iframe 
-    src="AtharvParab_NYU_ComputerEngineering.pdf#toolbar=0" 
+    src="https://drive.google.com/file/d/1KFbePqkF_d9ZljyQkM0_3xsIFgU2rZ1T/preview" 
     width="100%" 
     height="800px" 
     style="border: none;"
+    allow="autoplay"
   ></iframe>
 
+  <!-- Direct Download Button -->
   <p style="margin-top: 10px;">
     <a 
-      href="AtharvParab_NYU_ComputerEngineering.pdf" 
+      href="https://drive.google.com/uc?export=download&id=1KFbePqkF_d9ZljyQkM0_3xsIFgU2rZ1T" 
       target="_blank" 
       download
     >Download Resume</a>
   </p>
 </main>
+
 
 
   <footer class="footer">
