--- a/SRC/pages/resume.html
+++ b/SRC/pages/resume.html
@@ -23,6 +23,28 @@
         <div class="bx bx-menu" id="menu-icon"></div>
       </div>
     </div>
+
+    <style>
+  .resume-wrapper {
+    max-width: 1000px;
+    margin: 100px auto 40px auto;
+    padding: 0 20px;
+    text-align: center;
+  }
+
+  .resume-wrapper iframe {
+    width: 100%;
+    height: 800px;
+    border: none;
+  }
+
+  .download-link {
+    margin-top: 20px;
+    font-weight: bold;
+    display: inline-block;
+  }
+</style>
+
   </header>
 
   <main class="contact-main" style="padding: 40px; text-align: center;">
