--- a/SRC/pages/resume.html
+++ b/SRC/pages/resume.html
@@ -72,13 +72,13 @@
 
 
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="left"></div>
     <div class="right">
       <div class="social"><a href="https://www.linkedin.com/in/atharvparab17" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
       <div class="social"><a href="https://github.com/aup2007" target="_blank"><i class="fa-brands fa-github"></i></a></div>
     </div>
-  </footer>
+  </footer> -->
 
   <script type="text/javascript" src="../script/script.js"></script>
 </body>
