--- a/SRC/pages/resume.html
+++ b/SRC/pages/resume.html
@@ -55,7 +55,7 @@
   <iframe 
     src="https://drive.google.com/file/d/1KFbePqkF_d9ZljyQkM0_3xsIFgU2rZ1T/preview" 
     width="100%" 
-    height="500px" 
+    height="800px" 
     style="border: none;"
     allow="autoplay"
   ></iframe>
@@ -72,13 +72,13 @@
 
 
 
-  <!-- <footer class="footer">
+  <footer class="footer">
     <div class="left"></div>
     <div class="right">
       <div class="social"><a href="https://www.linkedin.com/in/atharvparab17" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
       <div class="social"><a href="https://github.com/aup2007" target="_blank"><i class="fa-brands fa-github"></i></a></div>
     </div>
-  </footer> -->
+  </footer>
 
   <script type="text/javascript" src="../script/script.js"></script>
 </body>
