--- a/SRC/pages/career.html
+++ b/SRC/pages/career.html
@@ -34,7 +34,11 @@
             <a href="./education.html">Education</a>
             <a href="./career.html" class="active">Career</a>
             <a href="./hobbies.html">Projects</a>
-            <a href="./resume.html" class="active">Resume</a>
+            <a 
+            href="https://drive.google.com/file/d/1KFbePqkF_d9ZljyQkM0_3xsIFgU2rZ1T/view?usp=sharing" 
+            target="_blank" 
+            rel="noopener noreferrer"
+            >Resume</a>
 
             <!-- <a href="./testimonials.html">Testimonials</a> -->
         </div>
