--- a/SRC/pages/education.html
+++ b/SRC/pages/education.html
@@ -36,7 +36,11 @@
             <a href="./education.html" class="active">Education</a>
             <a href="./career.html">Career</a>
             <a href="./hobbies.html">Projects</a>
-            <a href="./resume.html" class="active">Resume</a>
+<a 
+  href="https://drive.google.com/file/d/1KFbePqkF_d9ZljyQkM0_3xsIFgU2rZ1T/view?usp=sharing" 
+  target="_blank" 
+  rel="noopener noreferrer"
+>Resume</a>
 
             <!-- <a href="./testimonials.html">Testimonials</a> -->
         </div>
