--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
             <a href="SRC/pages/education.html">Education</a>
             <a href="SRC/pages/career.html">Career</a>
             <a href="SRC/pages/hobbies.html">Projects</a>
-            <a href="SRC/pages/resume.html" class="active">Resume</a>
+<a 
+  href="https://drive.google.com/file/d/1KFbePqkF_d9ZljyQkM0_3xsIFgU2rZ1T/view?usp=sharing" 
+  target="_blank" 
+  rel="noopener noreferrer"
+>Resume</a>
 
             <!-- <a href="SRC/pages/testimonials.html">Testimonials</a> -->
         </div>
