--- a/SRC/pages/hobbies.html
+++ b/SRC/pages/hobbies.html
@@ -31,6 +31,12 @@
       <a href="./education.html">Education</a>
       <a href="./career.html">Career</a>
       <a href="./hobbies.html" class="active">Projects</a>
+      <a 
+  href="https://drive.google.com/file/d/1KFbePqkF_d9ZljyQkM0_3xsIFgU2rZ1T/view?usp=sharing" 
+  target="_blank" 
+  rel="noopener noreferrer"
+>Resume</a>
+
       <!-- <a href="./testimonials.html">Testimonials</a> -->
     </div>
     <div class="main">
