--- a/SRC/pages/contact.html
+++ b/SRC/pages/contact.html
@@ -93,8 +93,7 @@
                             <div class="csa-ok">OK</div>
                         </div>
                     </div>
-                    <form id="contact-form" class="form-section" novalidate> -->
-                    <!-- <!-- <form action="https://formspree.io/f/xldbeqgd" method="POST"> -->
+                    <form id="contact-form" class="form-section" novalidate>
 
                         <div class="form-group name-section">
                             <label for="name">Name</label>
