changes to bio and career

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="column left">
                     <div class="text">I'm Atharv and I'm a <span id="typed" class="iAm"></span></div>
                     <p>
-                        I am a Graduate Student at <span class="nyu-highlight">New York University</span> majoring in Computer Engineering.
+                        I recently graduated from <span class="nyu-highlight">New York University</span> majoring in Computer Engineering.
                         My expertise spans predictive modeling, deep learning, with hands-on experience in AI-driven stock trading, investment analytics, and social impact projects. 
                         With proficiency in Python, SQL, Cloud Computing, and Big Data.
                     </p>
