--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
+    <script>
+  (function () {
+    const params = new URLSearchParams(window.location.search);
+    const src = params.get("src");
+
+    if (!src) return;
+
+    fetch("https://script.google.com/macros/s/AKfycbwOBqsP8JgOEH8_P2d8WxrKUT3_0qbT-CAuP5z3FxOy9ap4EAKLhhTfO99QvAXFmZc7tw/exec", {
+      method: "POST",
+      body: JSON.stringify({
+        src: src,
+        page: window.location.href,
+        ua: navigator.userAgent
+      })
+    });
+  })();
+    </script>
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WS6CMQJ75N"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
